# Probeklausur_PG2

./: .gitignore
PG2_2022/: CMakeLists.txt  Customer.cpp  Customer.hpp  Employee.cpp  Employee.hpp  FitnessCenter.cpp  FitnessCenter.hpp  Person.cpp  Person.hpp  main.cpp  names.cpp  names.hpp
PG2_2022/Datenbank/: datenbank.json
PG2_2023/PG2/: CMakeLists.txt  Channel.cpp  Channel.hpp  Device.cpp  Device.hpp  DimmableLight.cpp  DimmableLight.hpp  Display.cpp  Display.hpp  SimpleLight.cpp  SimpleLight.hpp  SmartHome.cpp  SmartHome.hpp  Thermostat.cpp  Thermostat.hpp  main.cpp  smarthome.json  smarthome1.json
